--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -6,7 +6,7 @@
     <title>{% block title %}Auctions{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 </head>
 <body>
 <h1>Auctions</h1>
@@ -22,6 +22,9 @@
         <a class="nav-link" href="{% url 'auctions:index' %}">Active Listings</a>
     </li>
     {% if user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'auctions:create' %}">Create Listing</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'auctions:logout' %}">Log Out</a>
         </li>
