--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -7,12 +7,13 @@
         {% for listing in listings %}
             <div class="row justify-content-start">
                 <div class="col-3 text-center">
-                    <img src="{{ listing.image_url }}" alt="Test image">
+                    <img src="{{ listing.image_url }}" alt="No image url provided">
                 </div>
                 <div class="col-9">
                     <h4>{{ listing.title }}</h4>
-                    <p id="price"><b>Price:</b> ${{ listing.starting_bid }}</p>
+                    <p id="price"><em>Price:</em> ${{ listing.starting_bid }}</p>
                     <p id="description">{{ listing.description }}</p>
+                    <p id="date_creation">Created: {{ listing.date_creation|date:'b d Y H:m'|title }}</p>
 
                 </div>
             </div>
