--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -5,18 +5,20 @@
     <hr>
     {% if listings %}
         {% for listing in listings %}
-            <div class="row justify-content-start">
-                <div class="col-3 text-center">
-                    <img src="{{ listing.image_url }}" alt="No image url provided">
-                </div>
-                <div class="col-9">
-                    <h4>{{ listing.title }}</h4>
-                    <p id="price"><em>Price:</em> ${{ listing.starting_bid }}</p>
-                    <p id="description">{{ listing.description }}</p>
-                    <p id="date_creation">Created: {{ listing.date_creation|date:'D, b Y H:i'|title }}</p>
+            <a href="{% url 'auctions:listing' listing.title %}">
+                <div class="row justify-content-start">
+                    <div class="col-3 text-center">
+                        <img src="{{ listing.image_url }}" alt="No image url provided">
+                    </div>
+                    <div class="col-9">
+                        <h4>{{ listing.title }}</h4>
+                        <p id="price"><em>Price:</em> ${{ listing.starting_bid }}</p>
+                        <p id="description">{{ listing.description }}</p>
+                        <p id="date_creation">Created: {{ listing.date_creation|date:'D, b Y H:i'|title }}</p>
 
+                    </div>
                 </div>
-            </div>
+            </a>
             <hr>
         {% endfor %}
     {% endif %}
