Add bid placement option

--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="col-9">
                         <h4>{{ listing.title }}</h4>
-                        <p id="price"><em>Price:</em> ${{ listing.starting_bid }}</p>
+                        <p id="price"><em>Price:</em> ${{ listing.current_price }}</p>
                         <p id="description">{{ listing.description }}</p>
                         <p id="date_creation">Created: {{ listing.date_creation|date:'D, b Y H:i'|title }}</p>
 
