--- a/commerce/auctions/templates/auctions/login.html
+++ b/commerce/auctions/templates/auctions/login.html
@@ -5,16 +5,23 @@
     <h2>Login</h2>
 
     {% if message %}
-        <div>{{ message }}</div>
+        <script>
+            alert('{{ message }}');
+        </script>
     {% endif %}
 
     <form action="{% url 'auctions:login' %}" method="post">
         {% csrf_token %}
+        <input type="hidden" name="next" value="{{ request.GET.next }}" />
         <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+            <label for="username">
+                <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+            </label>
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+            <label for="password">
+                <input class="form-control" type="password" name="password" placeholder="Password">
+            </label>
         </div>
         <input class="btn btn-primary" type="submit" value="Login">
     </form>
