Add messaging framework to display messages when the user should do something

--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -38,6 +38,23 @@
     {% endif %}
 </ul>
 <hr>
+
+{% if messages %}
+    {% for message in messages %}
+        {% if message.tags %}
+            {% if "{{ message.tags }} == error" %}
+                <div class="alert alert-danger" role="alert">
+                    {{ message }}
+                </div>
+            {% else %}
+                <div class="alert alert-primary" role="alert">
+                    {{ message }}
+                </div>
+            {% endif %}
+        {% endif %}
+    {% endfor %}
+{% endif %}
+
 {% block body %}
 {% endblock %}
 </body>
