--- a/commerce/auctions/templates/auctions/create.html
+++ b/commerce/auctions/templates/auctions/create.html
@@ -1,7 +1,12 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Create Listing:</h2>
+
+    {% if "create" in request.path %}
+        <h2>Create Listing:</h2>
+    {% else %}
+        <h2>Edit Listing:</h2>
+    {% endif %}
 
     <form action="{% url 'auctions:create' %}" method="post">
         {% csrf_token %}
@@ -12,7 +17,13 @@
                 {{ field }}
             </div>
         {% endfor %}
-        <input type="submit" class="btn btn-success" title="Save" value="Save">
+
+        {% if "create" in request.path %}
+            <input type="submit" class="btn btn-success" title="Save" name="Save" value="Save">
+        {% else %}
+            <input type="hidden" name="listing_id" value={{ listing_id }}>
+            <input type="submit" class="btn btn-success" title="Overwrite" name="Overwrite" value="Save">
+        {% endif %}
         <a href="{% url 'auctions:index' %}" class="btn btn-secondary">Cancel</a>
     </form>
 
