--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -9,16 +9,13 @@
     <h2>Listing: {{ listing.title }}</h2>
     <img src="{{ listing.image_url }}" alt="No image url provided" id="img_enlarged">
     <p id="description">{{ listing.description }}</p>
-    <p id="bid_count">{{ listing.get_bid_count }} bid(s)</p>
-    <p id="price"><strong>Price:</strong> ${{ listing.current_price }}</p>
-
-    <h4>Details:</h4>
-    <ul>
-        <li>Listed by: {{ listing.user.username }}</li>
-        <li>Listed on: {{ listing.date_creation }}</li>
-        <li>Category: {{ listing.user.category }}</li>
-    </ul>
-
+    <p id="price_listing">${{ listing.current_price }}</p>
+    <p id="bid_count">
+        {{ listing.get_bid_count }} bid(s) so far.
+        {% if listing.get_latest_bid.user.username == user.username %}
+            Your bid is the current bid.
+        {% endif %}
+    </p>
     <form action="{% url 'auctions:bid' listing.id %}" method="post">
         {% csrf_token %}
         {% for field in form %}
@@ -27,7 +24,21 @@
                 {{ field }}
             </div>
         {% endfor %}
-        <input type="submit" class="btn btn-success" title="Bid" value="Place Bid">
+        <input type="submit" class="btn btn-primary" title="Bid" value="Place Bid">
     </form>
+    <hr>
+    <h4>Details:</h4>
+    <ul>
+        <li>Listed by: {{ listing.user.username }}</li>
+        <li>Listed on: {{ listing.date_creation|date:'D, M Y H:i:s'|title }}</li>
+        <li>Category: {{ listing.user.category }}</li>
+    </ul>
+
+    {% if user.is_authenticated %}
+        {% if listing.user.username == user.username %}
+            <a href="{% url "auctions:edit" listing.id %}" class="btn btn-secondary">Edit</a>
+            <a href="{% url "auctions:close" listing.id %}" class="btn btn-danger">Close</a>
+        {% endif %}
+    {% endif %}
 
 {% endblock %}
