--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -9,23 +9,29 @@
     <h2>Listing: {{ listing.title }}</h2>
     <img src="{{ listing.image_url }}" alt="No image url provided" id="img_enlarged">
     <p id="description">{{ listing.description }}</p>
-    <p id="price_listing">${{ listing.current_price }}</p>
+    <p id="starting_bid">Starting bid: ${{ listing.starting_bid }}</p>
     <p id="bid_count">
         {{ listing.get_bid_count }} bid(s) so far.
-        {% if listing.get_latest_bid.user.username == user.username %}
+        {% if listing.get_bid_count > 0 and listing.get_latest_bid.user.username == user.username %}
             Your bid is the current bid.
         {% endif %}
     </p>
-    <form action="{% url 'auctions:bid' listing.id %}" method="post">
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="fieldWrapper">
-                {{ field.errors }}
-                {{ field }}
-            </div>
-        {% endfor %}
-        <input type="submit" class="btn btn-primary" title="Bid" value="Place Bid">
-    </form>
+    {% if listing.get_bid_count > 0 %}
+        <p id="price_listing">Latest bid: ${{ listing.current_price }}</p>
+    {% endif %}
+
+    {% if not user.is_authenticated %}
+        <form action="{% url 'auctions:bid' listing.id %}" method="post">
+            {% csrf_token %}
+            {% for field in form %}
+                <div class="fieldWrapper">
+                    {{ field.errors }}
+                    {{ field }}
+                </div>
+            {% endfor %}
+            <input type="submit" class="btn btn-primary" title="Bid" value="Place Bid">
+        </form>
+    {% endif %}
     <hr>
     <h4>Details:</h4>
     <ul>
