--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -9,18 +9,19 @@
     <h2>Listing: {{ listing.title }}</h2>
     <img src="{{ listing.image_url }}" alt="No image url provided" id="img_enlarged">
     <p id="description">{{ listing.description }}</p>
+    <br>
     <p id="starting_bid">Starting bid: ${{ listing.starting_bid }}</p>
+    {% if listing.get_bid_count > 0 %}
+        <p id="price_listing">Latest bid: ${{ listing.current_price }}</p>
+    {% endif %}
     <p id="bid_count">
         {{ listing.get_bid_count }} bid(s) so far.
         {% if listing.get_bid_count > 0 and listing.get_latest_bid.user.username == user.username %}
             Your bid is the current bid.
         {% endif %}
     </p>
-    {% if listing.get_bid_count > 0 %}
-        <p id="price_listing">Latest bid: ${{ listing.current_price }}</p>
-    {% endif %}
 
-    {% if not user.is_authenticated %}
+    {% if user.is_authenticated and user.username != listing.user.username %}
         <form action="{% url 'auctions:bid' listing.id %}" method="post">
             {% csrf_token %}
             {% for field in form %}
@@ -37,13 +38,18 @@
     <ul>
         <li>Listed by: {{ listing.user.username }}</li>
         <li>Listed on: {{ listing.date_creation|date:'D, M Y H:i:s'|title }}</li>
-        <li>Category: {{ listing.user.category }}</li>
+        <li>Latest bid on: {{ listing.get_latest_bid.date_creation|date:'D, M Y H:i:s'|title }}</li>
+        <li>Category: {{ listing.category }}</li>
     </ul>
 
     {% if user.is_authenticated %}
         {% if listing.user.username == user.username %}
             <a href="{% url "auctions:edit" listing.id %}" class="btn btn-secondary">Edit</a>
-            <a href="{% url "auctions:close" listing.id %}" class="btn btn-danger">Close</a>
+            {% if listing.active == False %}
+                <a href="{% url "auctions:reopen" listing.id %}" class="btn btn-success">Reopen Auction</a>
+            {% else %}
+                <a href="{% url "auctions:close" listing.id %}" class="btn btn-danger">Close Auction</a>
+            {% endif %}
         {% endif %}
     {% endif %}
 
