--- a/commerce/auctions/templates/auctions/show_listings.html
+++ b/commerce/auctions/templates/auctions/show_listings.html
@@ -1,6 +1,8 @@
+{% load get_item %}
+
 {% if listings %}
     {% for listing in listings %}
-        <a href="{% url 'auctions:listing' listing.id %}">
+        <a href="{% url 'auctions:listing' listing.id %}" class="anchor">
             <div class="row justify-content-start">
                 <div class="col-3 text-center">
                     <img src="{{ listing.image_url }}" alt="No image url provided">
@@ -10,13 +12,23 @@
                     <h4>{{ listing.title }}</h4>
                     <p id="price"><em>Price:</em> ${{ listing.current_price }}</p>
                     <p id="description">{{ listing.description }}</p>
-                    <p id="date_creation">Created: {{ listing.date_creation|date:'D, b Y H:i'|title }}</p>
+                    <p id="date_creation">Created: {{ listing.date_creation|date:'D, d b Y H:i'|title }}</p>
                     {% if listing.active %}
-                        <span class="badge badge-pill badge-primary">Open</span>
+                        <span class="badge badge-pill badge-primary">Active</span>
                     {% else %}
                         <span class="badge badge-pill badge-warning">Closed</span>
                     {% endif %}
-
+                    {% if request.user.id != listing.user.id and not request.user.is_anonymous %}
+                        {% if not wished|get_item:listing.id %}
+                            <a href="{% url 'auctions:add_to_wishlist' listing.id %}"
+                               class="badge badge-pill badge-success">Add to Wishlist</a>
+                        {% else %}
+                            <a href="{% url 'auctions:remove_from_wishlist' listing.id %}"
+                               class="badge badge-pill badge-warning">Remove from Wishlist</a>
+                        {% endif %}
+                    {% elif request.user.id == listing.user.id %}
+                        <a href="{% url 'auctions:my_listings' %}" class="badge badge-pill badge-secondary">Owned</a>
+                    {% endif %}
                 </div>
             </div>
         </a>
