--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -23,7 +23,7 @@
     </li>
     {% if user.is_authenticated %}
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'auctions:wishlist' %}">Wishlist</a>
+            <a class="nav-link" href="{% url 'auctions:watchlist' %}">Watchlist</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'auctions:create' %}">Create Listing</a>
