--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -5,6 +5,6 @@
 {% block body %}
     <h2>Active Listings</h2>
     <hr>
-    {% show_listings request listings wished %}
+    {% show_listings request listings watched %}
 
 {% endblock %}
