--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -32,6 +32,9 @@
             <a class="nav-link" href="{% url 'auctions:my_listings' %}">My Listings</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="{% url 'auctions:my_biddings' %}">My Biddings</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'auctions:logout' %}">Log Out</a>
         </li>
     {% else %}
