--- a/commerce/auctions/templates/auctions/my_listings.html
+++ b/commerce/auctions/templates/auctions/my_listings.html
@@ -4,6 +4,6 @@
 {% block body %}
     <h2>My Listings</h2>
     <hr>
-    {% show_listings request listings wished %}
+    {% show_listings request listings watched %}
 
 {% endblock %}
