Bundle user options into dropdown menu

--- a/commerce/auctions/templates/auctions/show_listings.html
+++ b/commerce/auctions/templates/auctions/show_listings.html
@@ -22,7 +22,7 @@
                 {% else %}
                     <span class="badge badge-pill badge-secondary">Closed</span>
                 {% endif %}
-                {% if request.user.id != listing.user.id and not request.user.is_anonymous %}
+                {% if request.user.id != listing.user.id and not request.user.is_anonymous and listing.active %}
                     {% if not watched|get_item:listing.id %}
                         <a href="{% url 'auctions:add_to_watchlist' listing.id %}"
                            class="badge badge-pill badge-success">Add to watchlist</a>
@@ -30,7 +30,7 @@
                         <a href="{% url 'auctions:remove_from_watchlist' listing.id %}"
                            class="badge badge-pill badge-warning">Remove from watchlist</a>
                     {% endif %}
-                {% elif request.user.id == listing.user.id %}
+                {% elif request.user.id == listing.user.id and "mylistings" not in request.path %}
                     <a href="{% url 'auctions:my_listings' %}"
                        class="badge badge-pill badge-secondary">Owned</a>
                 {% endif %}
