--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -4,6 +4,14 @@
 <html lang="en">
 <head>
     <title>{% block title %}Auctions{% endblock %}</title>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
@@ -19,30 +27,28 @@
 </div>
 <ul class="nav">
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'auctions:index' %}">Active Listings</a>
+        <a class="nav-link btn btn-basic" href="{% url 'auctions:index' %}">Active Listings</a>
     </li>
     {% if user.is_authenticated %}
+        <div class="dropdown show">
+            <a class="nav-link btn btn-basic dropdown-toggle" type="button" id="dropdownMenuButton"
+               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User options</a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="{% url 'auctions:watchlist' %}">Watchlist</a>
+                <a class="dropdown-item" href="{% url 'auctions:create' %}">Create Listing</a>
+                <a class="dropdown-item" href="{% url 'auctions:my_listings' %}">My Listings</a>
+                <a class="dropdown-item" href="{% url 'auctions:my_biddings' %}">My Biddings</a>
+            </div>
+        </div>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'auctions:watchlist' %}">Watchlist</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'auctions:create' %}">Create Listing</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'auctions:my_listings' %}">My Listings</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'auctions:my_biddings' %}">My Biddings</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'auctions:logout' %}">Log Out</a>
+            <a class="nav-link btn btn-basic" href="{% url 'auctions:logout' %}">Log Out</a>
         </li>
     {% else %}
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'auctions:login' %}">Log In</a>
+            <a class="nav-link btn btn-basic" href="{% url 'auctions:login' %}">Log In</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'auctions:register' %}">Register</a>
+            <a class="nav-link btn btn-basic" href="{% url 'auctions:register' %}">Register</a>
         </li>
     {% endif %}
 </ul>
