--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -44,6 +44,8 @@
     {% else %}
         {% if listing.get_latest_bid.user.username == user.username %}
             <p class="price_listing">You have won the auction with a bid of: ${{ listing.current_price }}</p>
+            {% else %}
+            <p>This auction is closed at a price of: ${{ listing.current_price }}</p>
         {% endif %}
     {% endif %}
 
