Add option to add comments to listing

--- a/commerce/auctions/static/auctions/css/styles.css
+++ b/commerce/auctions/static/auctions/css/styles.css
@@ -47,3 +47,11 @@ textarea {
 .price_listing {
     font-weight: bold;
 }
+
+.comment-header {
+    font-size: smaller;
+}
+
+.comment-btn {
+    font-size: smaller;
+}
